--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="skill-row">
         <img class="second-photo" src="C:\Users\user\OneDrive\Pictures\Screenshots\Screenshot (39).png" alt="">
         <h3>Problem Solving </h3>
-        <p>This consist of many other skill like critical thinking and good commubication both writing and verbal. I must include my debugging skill while coding is a big plus.</p>
+        <p>This consist of many other skill like critical thinking and good communication both writing and verbal. I must include my debugging skill while coding is a big plus.</p>
       </div>
     </div>
     
